test/typechecker.d/invalid/ass3.souc.bad
n = 5

f(x: Integer): Integer = fndo
	b1 = 4
	b2 = b1
	if b2
		return x
	else
		return n
